test/jzas/symboltable/invalid/fail02.asm
var1:	defl 0
var1:	equ 99
